Add simple demo of logging

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,7 @@
     <script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
     <script src="../bower_components/breadboard/client-breadboard-activity.js"></script>
     <script src="js/datastore.js"></script>
+    <script src="js/log.js"></script>
     <style>
       body {
         background-color: #FFFEF2;
