--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,7 +5,7 @@
     <link href='http://fonts.googleapis.com/css?family=Anonymous+Pro:700' rel='stylesheet' type='text/css'>
     <link href='css/tt.css' rel='stylesheet' type='text/css' />
 
-    <script src="http://fb.me/react-0.12.2.js"></script>
+    <script src="http://fb.me/react-with-addons-0.12.2.js"></script>
     <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
     <script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
 
